--- a/reqs/requirements.txt
+++ b/reqs/requirements.txt
@@ -6,3 +6,4 @@ django-uploader
 django-bootstrap3
 django-allauth
 git+https://github.com/mariocesar/sorl-thumbnail.git
+git+https://github.com/defcube/django-unique-slugify.git
